--- a/Templates/jquery_fade.html
+++ b/Templates/jquery_fade.html
@@ -28,6 +28,7 @@
 
 
 <button>Click to fade in boxes</button><br><br>
+<button>2 Click to fade in boxes</button><br><br>
 
 <div id="div1" ></div><br>
 <div class="div2"></div><br>
