--- a/CSS/site.css
+++ b/CSS/site.css
@@ -12,3 +12,33 @@
     display:none;
     background-color:green;
 }
+
+.main{
+    border: 1px solid red;
+}
+
+/* 
+.side{
+    width
+    border: 1px solid black;
+} */
+
+
+.left{
+    border: 1px solid lightcoral;
+    /* width:50% */
+}
+
+.right{
+    border: 1px solid green;
+    /* width:50%; */
+}
+
+#img1{
+    margin:30px;
+}
+
+.myTable{
+    width:100%;
+    height: 400px;
+}
