--- a/Templates/navbar.html
+++ b/Templates/navbar.html
@@ -42,6 +42,7 @@
     <div class="container-fluid main">
 
         <div class="row">
+
             <div class="col-sm-6">
                 <div class="left">
                     <table class="myTable">
@@ -55,28 +56,67 @@
                             <td>Smith</td>
                             <td>50</td>
                         </tr>
+
                         <tr>
-                            <td>Eve</td>
+                            <td>gupta</td>
                             <td>Jackson</td>
                             <td>94</td>
                         </tr>
                     </table>
                 </div>
-
             </div>
+
             <div class="col-sm-6">
                 <div class="right">
-                    <h2>HTML Image</h2>
                     <img id="img1" src="https://www.w3schools.com/Html/pic_trulli.jpg" alt="Trulli">
                 </div>
 
             </div>
+
         </div>
 
+        <br/>
+        <hr/>
+        <br />
+
+
+        <div class="row">
+
+            <div class="right">
+                <div class="col-sm-6">
+                    <div class="right">
+                        <img id="img1" src="https://www.w3schools.com/Html/pic_trulli.jpg" alt="Trulli">
+                    </div>
+                </div>
+                <div class="col-sm-6">
+                    <div class="left">
+                        <table class="myTable">
+                            <tr>
+                                <th>Firstname</th>
+                                <th>Lastname</th>
+                                <th>Age</th>
+                            </tr>
+                            <tr>
+                                <td>Jill</td>
+                                <td>Smith</td>
+                                <td>50</td>
+                            </tr>
+
+                            <tr>
+                                <td>gupta</td>
+                                <td>Jackson</td>
+                                <td>94</td>
+                            </tr>
+                        </table>
+                    </div>
+
+                </div>
 
 
 
-    </div>
+            </div>
+        </div>
+
 </body>
 
 </html>
