--- a/CSS/site.css
+++ b/CSS/site.css
@@ -15,6 +15,9 @@
 
 .main{
     border: 1px solid red;
+    margin:50px;
+    padding:30px;
+
 }
 
 /* 
@@ -26,19 +29,47 @@
 
 .left{
     border: 1px solid lightcoral;
-    /* width:50% */
+    overflow-y: scroll;
+    max-height: 500px;
+    margin:50px;
+    padding:30px;
 }
 
 .right{
     border: 1px solid green;
-    /* width:50%; */
+    margin:50px;
+    padding:30px;
 }
 
 #img1{
-    margin:30px;
+    /* margin:30px; */
+    width:50%;
 }
 
 .myTable{
-    width:100%;
-    height: 400px;
+    border-width: 1px;
+    border-spacing: 2px;
+    border-style: outset;
+    border-color: gray;
+    border-collapse: separate;
+    background-color: lightpink;
+    overflow-y: scroll; 
+    
 }
+.myTable td {
+    width: 800%;
+    border-width: 1px;
+    padding: 1px;
+    border-style: inset;
+    border-color: gray;
+    background-color: lightseagreen;
+}
+
+
+.myTable th {
+    border-width: 1px;
+    padding: 1px;
+    border-style: inset;
+    border-color: gray;
+    background-color: lightgreen;
+} 
